# franka_py

./: .gitignore  README.md  pixi.toml  pyproject.toml
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: RigSegmentations.msg  RigSnapshot.msg
franka_adaptable_controllers/: CMakeLists.txt  franka_adaptable_controllers.xml  package.xml
franka_adaptable_controllers/include/franka_adaptable_controllers/: joint_position_adaptable_controller.hpp  robot_utils.hpp
franka_adaptable_controllers/src/: joint_position_adaptable_controller.cpp
franka_client/: package.xml  setup.cfg  setup.py
franka_client/config/: replay_client.yaml  robi_client.yaml
franka_client/franka_client/: action_processors.py  client.py  lerobot_utils.py  msg_extractors.py  replay_client.py  services_pb2.py  services_pb2_grpc.py
franka_control_module/: CMakeLists.txt  package.xml
franka_control_module/launch/: cartesian.launch.py  start.launch.py
franka_control_module/src/: franka_cartesian_module.cpp  franka_control_module.cpp
franka_custom_msgs/: CMakeLists.txt  package.xml
franka_custom_msgs/msg/: FIJKDebug.msg  FMQDebug.msg
franka_data_collection/: package.xml  setup.cfg  setup.py  test_data_collection.py
franka_data_collection/config/: data_collector.yaml
franka_data_collection/franka_data_collection/: data_collector_node.py  data_collector_node_old.py  handlers.py  image_buffer.py  video_encoder.py
franka_data_collection/launch/: start.launch.py
franka_joint_trajectory_controller/: CMakeLists.txt  README.md  franka_joint_trajectory_plugin.xml  package.xml
franka_joint_trajectory_controller/include/franka_joint_trajectory_controller/: franka_joint_trajectory_controller.hpp  helpers.hpp  interpolation_methods.hpp  tolerances.hpp  trajectory.hpp  validate_jtc_parameters.hpp  visibility_control.h
franka_joint_trajectory_controller/src/: franka_joint_trajectory_controller.cpp  franka_joint_trajectory_controller_parameters.yaml  trajectory.cpp
franka_launch/: CMakeLists.txt  README.md  package.xml
franka_launch/config/: controllers.yaml  dfki_bimanual.yaml  dynamixel_controllers.yaml  franka.config.yaml
franka_launch/launch/: example.launch.py  franka.launch.py  gazebo.launch.py  gazebo_joint_position_controller_example.launch.py  gripper.launch.py  joint_impedance_with_ik_example_controller.launch.py  visualize_franka_robot.launch.py
franka_launch/rviz/: visualize_franka.rviz
franka_meta_quest/: package.xml  requirements.txt  setup.cfg  setup.py
franka_meta_quest/config/: teleop.yaml  teleop_left.yaml  teleop_right.yaml
franka_meta_quest/franka_meta_quest/oculus_action/: audio_publisher.py  main.py  oculus_controller.py  oculus_reader.py  transformations.py
franka_meta_quest/franka_meta_quest/old/: misc_teleop.py  robot_env_teleop.py  teleop.py
franka_meta_quest/launch/: start.launch.py
franka_meta_quest/scripts/: extract_audio.py
franka_robot_description/: CMakeLists.txt  package.xml
franka_robot_description/config/: dfki_fr3_left.yaml  dfki_fr3_right.yaml  fr3.yaml
franka_robot_description/launch/: rh_p12_rn_a.launch.py  robot.launch.py  visualize.launch.py
franka_robot_description/meshes/cameras/zed/: zed_holder.stl
franka_robot_description/robots/common/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro  franka_arm.xacro  franka_robot.xacro  utils.xacro
franka_robot_description/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro
franka_robot_description/urdf/cameras/zed/: zed_descr.urdf.xacro  zed_macro.urdf.xacro
franka_robot_description/urdf/end_effectors/common/: ee_with_one_link.xacro  franka_hand.xacro  utils.xacro
franka_robot_description/urdf/end_effectors/franka_hand/: franka_hand.urdf.xacro  franka_hand_arguments.xacro
franka_robot_description/urdf/end_effectors/rh_p12_rn_a/: rh_p12_rn_a.ros2_control.xacro  rh_p12_rn_a.urdf.xacro  rh_p12_rn_a.xacro  rh_p12_rn_a_macro.urdf.xacro
franka_robot_description/urdf/main_assemblies/: bimanual_dfki.urdf.xacro
franka_robot_description/urdf/robots/fr3/: fr3.urdf.xacro
franka_safety_layer/: CMakeLists.txt  package.xml
franka_safety_layer/config/: safety_params.yaml
franka_safety_layer/include/franka_safety_layer/: franka_ijk.hpp  franka_safety_node.hpp  safety_layer.hpp  vis.hpp
franka_safety_layer/launch/: move_group.launch.py  node.launch.py  start.launch.py  start_ijk.launch.py
franka_safety_layer/src/: franka_ijk.cpp  franka_safety_node.cpp  node.cpp  safety_layer.cpp  vis.cpp
franka_ui/: package.xml  setup.cfg  setup.py
franka_ui/franka_ui/: main.py  process_manager.py  ros_interface.py  ui.py
franka_visualization/: CMakeLists.txt  package.xml
franka_visualization/launch/: pose_lines.launch.py
franka_visualization/src/: pose_line_node.cpp
robot_description/: CMakeLists.txt  package.xml
robot_description/urdf/: rh_p12_rn_a.urdf.xacro
scripts/: run_client.sh  run_data_collection.sh  run_robot.sh  run_teleop.sh  set_ros_env.sh  setup.sh
zed_rig_aggregator_node/: CMakeLists.txt  package.xml
zed_rig_aggregator_node/config/: zed_rig_aggregator_node_config.yaml
zed_rig_aggregator_node/launch/: aggregator.launch.py
zed_rig_aggregator_node/src/: zed_rig_aggregator.cpp  zed_rig_aggregator_with_depth_conf.cpp
